src/components/Navbar.css
.navbar{
    width: 100vw;
    display: flex;
    flex-direction: column;
    z-index: 20;
}
.nav-main.sticky{
    height: 60px;
    top: 0;
}
.nav-main{
    width: 100%;
    display: flex;
    justify-content: center;
    height: 80px;
    box-shadow: 0px 4px 5px -5px rgba(0,0,0, 0.2);
    background: white;
    transition: height 0.1s linear;
    position: fixed;
    top: 30px;
}
.navbar-container{
    width: 100%;
    display: flex;
    justify-content: space-between;
    max-width: 1120px;
    align-items: center;
    padding: 0 20px;
}
.logo{
    background: white;
    padding: 5px;
    border-radius: 4px;
    border: 4px solid black;
    cursor: pointer;
}
.logo:hover{
    color: rgba(0,0,0, 0.7);
    border: 4px solid rgba(0,0,0, 0.7);
}
.fa-flag-checkered{
    position: relative;
    bottom: -4px;
}
.navbar-right{
    display: flex;
    align-items: center;
    gap: 2.5rem;
}
.right-icons{
    display: flex;
    gap: 30px;
    align-items: center;
}
.right-icons i{
    cursor: pointer;
}
.navbar a{
    text-decoration: none;
    color:black;
    font-size: 16px;
    font-weight: bold;
}
.navbar a:hover{
    color: rgba(0,0,0, 0.7);
}
.nav-extra{
    width: 100vw;
    background: lightgray;
    display: flex;
    justify-content: end;
    padding: 6px 40px 6px 10px;
}
.nav-extra a{
    padding: 0 10px;
    font-size: 12px;
}
.nav-extra a:nth-child(2){
    border-left: 1px solid black;
}
.nav-extra a:nth-child(3){
    border-left: 1px solid black;
}
.nav-extra a:nth-child(4){
    border-left: 1px solid black;
}
.fa-bars{
    display: none;
    position: relative;
    bottom: 1px;
}
.cart-icon{
    position: relative;
}
.cart-num{
    position: absolute;
    top: -16px;
    right: -10px;
    border-radius: 50%;
    color: white;
    background: rgb(177, 2, 2);
    padding: 3px 5px;
    font-size: 10px;
    font-weight: bold;
}

.mobile-menu{
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    gap: 20px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: white;
}
.mobile-menu a{
    color: black;
    visibility: visible;
    font-size: 36px;
    font-weight: normal;
}
.mobile-menu span{
    position: absolute;
    top: 80px;
    right: 40px;
}

@media (max-width:900px) {
    .navbar-right a{
        display: none;
    }
    .mobile-menu a{
        display: flex;
    }
    .fa-bars{
        display: flex;
    }
    .nav-extra{
        display: none;
    }
    .nav-main{
        top: 0px;
    }
}

